# pyella

./: .gitignore  .gitlint  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml  test.yml
assets/release/: release-all.sh
docs/: api.rst  conf.py  index.rst
src/: mypy.ini  noxfile.py  pylintrc
src/pyella/: __init__.py  either.py  maybe.py  reader.py  shared.py
src/tests/: fixtures.py  test_either.py  test_maybe.py  test_reader.py
